[tool.poetry]

name = "minilog"
version = "2.0b1"
description = "Minimalistic wrapper for Python logging."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"
packages = [
    { include = "log" }
]

homepage = "https://pypi.org/project/minilog"
documentation = "https://minilog.readthedocs.io"
repository = "https://github.com/jacebrowning/minilog"

keywords = ["logging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: System :: Logging",
]

[tool.poetry.dependencies]

python = "^3.6"

[tool.poetry.dev-dependencies]

# Formatters
black = "=20.8b1"
isort = "=5.5.1"

# Linters
pylint = "~2.6.0"
pydocstyle = "*"
mypy = "~0.761"

# Testing
pytest = "^5.4"
pytest-describe = "^1.0"
pytest-expecter = "*"
pytest-repeat = "*"
pytest-random = "*"
pytest-cov = "*"
pytest-profiling = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1.1"

# Documentation
mkdocs = "~1.0"
pygments = "^2.5.2"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
